# VCOffice

./: .gitattributes  .gitignore  LICENSE  README.md
extension/: CHANGELOG.md  README.md  package-lock.json  package.json
extension/src/: extension.ts
wasm/: CMakeLists.txt  build.py
wasm/src/: CMakeLists.txt  Theme.hpp  main.cpp
wasm/src/common/: AbstractEditor.hpp  CMakeLists.txt  FontFlags.hpp  Object.hpp  OfficeItem.cpp  OfficeItem.hpp  RTButton.cpp  RTButton.hpp  RunProperties.hpp  SealedPtr.hpp  isType.hpp
wasm/src/common/start/: ClipboardSec.cpp  ClipboardSec.hpp  FontSec.cpp  FontSec.hpp
wasm/src/decoder/: CMakeLists.txt  decompressor.cpp  decompressor.hpp  docx_decoder.cpp  docx_decoder.hpp
wasm/src/decoder/word_item/: LF.hpp  Paragraph.cpp  Paragraph.hpp  RichText.cpp  RichText.hpp  Section.cpp  Section.hpp
wasm/src/ppt_player/: CMakeLists.txt  PPT_Player.cpp  PPT_Player.hpp
wasm/src/word/: CMakeLists.txt  EditorStatus.hpp  WordEditor.cpp  WordEditor.hpp  WordScene.cpp  WordScene.hpp
wasm/src/word/fntabs/: StartTab.cpp  StartTab.hpp
wasm/src/word/fntabs/start/: ClipboardSec.cpp  ClipboardSec.hpp  FontSec.hpp
wasm/src/word/items/: RT.cpp  RT.hpp
wasm/src/word/layout/: CR.cpp  CR.hpp  Page.cpp  Page.hpp  Para.cpp  Para.hpp  Section.hpp
wasm/test/: test.docx  ~$test.docx
